--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1 class="name"><strong>Misha</strong><br/><strong>Babar</strong></h1>
     <p class="d_p">Web Developer</p>
     <div class="profile">
-          <img src="pro.jpeg.jpg" alt="Profile Picture"/>
+          <img src="mish.jpg" alt="Profile Picture"/>
           <br/><br/><br/>
           <h4>ABOUT ME</h4>
           <p class="about_P">A passionate frontend web developer with a strong focus on creating interactive, user-friendly digital experiences.With expertise in HTML, CSS, JavaScript and modern frameworks,I specialize in building responsive websites that combine creativity with clean, efficient code. 
